Sat Oct 12 00:17:06 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.h.bot (STATIC_CAST, DYNAMIC_CAST, REINTERPRET_CAST):
	New macros.

Wed Sep 25 12:24:20 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't look in /usr/ucb/include to find getrusage
	on Solaris systems since that just seems to cause trouble.
	* Makeconf.in (UCB_INCFLAGS): Delete.

Fri Aug 30 09:07:23 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (TERMLIBS): Add check for ncurses.

Tue Aug 20 21:40:26 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Always set FPICFLAG, CPICFLAG, CXXPICFLAG, SHLEXT,
	RLD_FLAG, DLFCN_DIR, even if SHARED_LIBS is false.

Thu Aug 15 14:39:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (gxx_version, gcc_version): Strip out cygnus- from
	the version number.

Tue Jul 30 12:55:43 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_FLIBS): Also check for -bI:FILE arg to ld,
	for AIX systems.

Thu Jul 25 03:09:29 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: On AIX systems, add "-ll -lld" to LIBDLFCN.

Fri Jul 19 13:02:05 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If using g77 on alpha, don't add -fpe1 to FFLAGS.

Mon Jul 15 14:26:48 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.sub: Update to new version from FSF (gcc sources).

Thu Jun 13 16:38:51 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Look for g77 before other fortran compilers.

Thu Jun  6 00:05:47 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Add check for multiple plot windows in gnuplot.
	* acconfig.h: Add #undef for GNUPLOT_HAS_FRAMES.

Wed May 22 15:05:40 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (UCB_INCFLAGS): Another kluge to try to find
	getrusage on Solaris systems.
	* Makeconf.in Substitute it.

	* configure.in (SH_LIBS, SH_FLIBS, SH_TERMLIBS): Define.
	* Makeconf.in: Substitute.
